fix about me page spacing

--- a/src/app/about/About.module.scss
+++ b/src/app/about/About.module.scss
@@ -58,7 +58,7 @@
 }
 
 .content {
-  padding: 0 1.5rem 5rem;
+  padding-bottom: 5rem;
 }
 
 .container {
